fix(compass-aggregations): add z-index to top level aggregations to avoid overlaying the modal COMPASS-5151 (#2508)

--- a/packages/compass-aggregations/src/components/aggregations/aggregations.module.less
+++ b/packages/compass-aggregations/src/components/aggregations/aggregations.module.less
@@ -7,4 +7,5 @@
   background-color: @gray8;
   position: relative;
   min-height: 0;
+  z-index: 0;
 }
